fixed textarea bug for too much text, so added auto scroll. optimized styling for responsiveness on mobile

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "React Calculator",
+  "name": "A React-based Calculator by Brandon Chung",
   "icons": [
     {
       "src": "favicon.ico",
